--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   "devDependencies": {
     "browser-sync": "^2.9.11",
     "gulp": "^3.9.0",
-    "gulp-coffee": "^2.3.1"
+    "gulp-babel": "^5.3.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-sass": "^2.0.4"
+  },
+  "dependencies": {
+    "fs": "0.0.2"
   }
 }
