--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jseiden/water-you-doing#readme",
   "devDependencies": {
     "browser-sync": "^2.9.11",
+    "coffeeify": "^1.1.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.3.0",
     "gulp-coffee": "^2.3.1",
